Honour whitespace properly in the data grid. Fixes #2880

--- a/web/pgadmin/tools/sqleditor/static/css/sqleditor.css
+++ b/web/pgadmin/tools/sqleditor/static/css/sqleditor.css
@@ -521,3 +521,7 @@ input.editor-checkbox:focus {
 .pg_buttons {
   text-align:right;
 }
+
+#datagrid .slick-row .slick-cell {
+  white-space: pre;
+}
